# esp-iot

001/: mosquitto.conf
001/tls-mqtt/: CMakeLists.txt
001/tls-mqtt/certs/: ca.crt  ca.srl  server.crt
001/tls-mqtt/main/: CMakeLists.txt  main.c  mqtt.c  mqtt.h  wifi.c  wifi.h
001/tls-mqtt/main/certs/: ca.key  client.crt  client.key  server.csr  server.key
